--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-  </head>
+<link href='style.css' type='text/css' rel='stylesheet'>
+</head>
+
   <body>
+
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+    </ul>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/ui.js"></script>
+  <script src="js/data.js"></script>
 
   </body>
 </html>
