I added my token code button and set up the click function in js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
   <body>
-
+    <h1>Authorization</h1>
+      <button class="tButton">Submit</button>
+      <input type='text' id='token'>
     <ul>
       <li>1</li>
       <li>2</li>
